updated layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@
     right:64px;
     z-index: 2;
 }
+
 .header__square-pic {
     height: 568px;
     width: 568px;
@@ -73,7 +74,6 @@
 .description{
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #F2F2F2;
 }
 
 .description__two-columns{
@@ -108,11 +108,12 @@
   line-height: 34px;
   font-size: 24px;
 }
+
 .digits{
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #F2F2F2;
 }
+
 .digits__section-title{
   width: 60%;
   text-align: center;
@@ -130,27 +131,32 @@
   font-size: 24px;
   font-weight: normal;
 }
+
 .table{
   display: flex;
   justify-content: space-between;
   margin: auto;
   width: 1100px;
 }
+
 .table_cell{
   width: 250px;
   padding-top: 60px;
   list-style: none;
 }
+
 .table_heading{
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
 }
+
 .table_text{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
+
 .feynman{
   height: 790px;
   background-image: url("../images/feynman.png");
@@ -159,6 +165,7 @@
   padding-top: 100px;
   background-color: #F2F2F2;
 }
+
 .feynman__title{
   width: 775px;
   margin: auto;
@@ -169,6 +176,7 @@
   font-weight: bold;
   margin-bottom: 70px;
 }
+
 .feynman__subtitle{
   text-align: center;
   justify-content: center;
@@ -176,8 +184,8 @@
   font-size: 36px;
   font-weight: normal;
 }
+
 .feynman__link{
-  color: #2F80ED;
   position: absolute;
   height: 50%;
   text-align: start;
@@ -188,6 +196,7 @@
   font-size: 36px;
   font-weight: normal;
 }
+
 .kaufman{
   overflow: hidden;
   padding-top: 90px;
@@ -196,6 +205,7 @@
   color: white;
   position: relative;
 }
+
 .section-title_theme_dark{
   width: 60%;
   margin: auto;
@@ -205,6 +215,7 @@
   font-size: 60px;
   font-weight: bold;
 }
+
 .section-subtitle_theme_dark{
   width: 60%;
   margin: auto;
@@ -213,6 +224,7 @@
   font-size: 24px;
   font-weight: normal;
 }
+
 .table__theme_dark{
   display: flex;
   justify-content: space-between;
@@ -220,22 +232,26 @@
   margin: auto;
   z-index: 2;
 }
+
 .table__cell_theme_dark {
   width: 200px;
   list-style: none;
   margin-top: 80px;
   z-index: 2;
 } 
+
 .table__heading_theme_dark{
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
 }
+
 .table__text_theme_dark{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
+
 .kaufman__triangle{
   position: absolute;
   top: 0;
@@ -297,7 +313,6 @@ flex-direction: column;
 .footer__column-links{
   list-style: none;
   text-decoration: none;
-  color: #2F80ED;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
@@ -314,7 +329,4 @@ flex-direction: column;
   height: 16px;
   width: 16px;
   padding-right: 10px;
-  color: #2F80ED;
 }
-
-
